# JiuPlayer

./: CMakeLists.txt  CMakeSettings.json
Common/: CMakeLists.txt  Dic.cpp  Dic.h  EventLoop.cpp  EventLoop.h  EventQueue.cpp  EventQueue.h  Log.cpp  Log.h  LogWriter.cpp  LogWriter.h
Common/Net/: HttpClient.cpp  HttpClient.h  HttpParse.cpp  HttpParse.h  ParseUrl.cpp  ParseUrl.h
Player/: CMakeLists.txt  main.cpp
